// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react:stories for applications should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react-webpack5';
import { NxWelcome } from './nx-welcome';
import { expect } from 'storybook/test';

const meta = {
  component: NxWelcome,
  title: 'NxWelcome',
} satisfies Meta<typeof NxWelcome>;
export default meta;

type Story = StoryObj<typeof NxWelcome>;

export const Primary = {
  args: {
    title: '',
  },
} satisfies Story;

export const Heading = {
  args: {
    title: '',
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/NxWelcome/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`react:stories for applications should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react-webpack5';
import { Test } from './another-cmp';
import { expect } from 'storybook/test';

const meta = {
  component: Test,
  title: 'Test',
} satisfies Meta<typeof Test>;
export default meta;

type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
} satisfies Story;

export const Heading = {
  args: {
    name: '',
    displayAge: false,
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/Test/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`react:stories for applications should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react-webpack5';
import { NxWelcome } from './nx-welcome';

const meta = {
  component: NxWelcome,
  title: 'NxWelcome',
} satisfies Meta<typeof NxWelcome>;
export default meta;

type Story = StoryObj<typeof NxWelcome>;

export const Primary = {
  args: {
    title: '',
  },
} satisfies Story;
"
`;

exports[`react:stories for applications should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react-webpack5';
import { Test } from './another-cmp';

const meta = {
  component: Test,
  title: 'Test',
} satisfies Meta<typeof Test>;
export default meta;

type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
} satisfies Story;
"
`;

exports[`react:stories for applications should not update existing stories 1`] = `
"import { ComponentStory, ComponentMeta } from '@storybook/react-webpack5';
"
`;
